-Added option to set constant color in grayscale mode.