@@ -2,7 +2,7 @@
 
 HWND hwnd = NULL;
 HANDLE outputHandle = NULL;
-HWND conHWND = NULL, wtInputHWND = NULL, wtDragBarHWND = NULL;
+HWND conHWND = NULL, wtDragBarHWND = NULL;
 int imgW = -1, imgH = -1;
 int conW = -1, conH = -1;
 int wndW = -1, wndH = -1;
